@@ -154,13 +154,8 @@ ecore_evas_engine_type_supported_get(Ecore_Evas_Engine_Type engine)
         return EINA_FALSE;
 #endif
 
-          case ECORE_EVAS_ENGINE_SOFTWARE_8_X11:
-#ifdef BUILD_ECORE_EVAS_SOFTWARE_8_X11
-        return EINA_TRUE;
-#else
+      case ECORE_EVAS_ENGINE_SOFTWARE_8_X11:
         return EINA_FALSE;
-#endif
-
       case ECORE_EVAS_ENGINE_SOFTWARE_16_X11:
         return EINA_FALSE;
       case ECORE_EVAS_ENGINE_SOFTWARE_16_DDRAW:
@@ -455,22 +450,6 @@ _ecore_evas_constructor_opengl_x11(int x, int y, int w, int h, const char *extra
 }
 #endif
 
-#ifdef BUILD_ECORE_EVAS_SOFTWARE_8_X11
-static Ecore_Evas *
-_ecore_evas_constructor_software_8_x11(int x, int y, int w, int h, const char *extra_options)
-{
-   Ecore_X_Window parent = 0;
-   char *disp_name = NULL;
-   Ecore_Evas *ee;
-
-   _ecore_evas_parse_extra_options_x(extra_options, &disp_name, &parent);
-   ee = ecore_evas_software_x11_8_new(disp_name, parent, x, y, w, h);
-   free(disp_name);
-
-   return ee;
-}
-#endif
-
 #ifdef BUILD_ECORE_EVAS_SOFTWARE_SDL
 static Ecore_Evas *
 _ecore_evas_constructor_sdl(int x EINA_UNUSED, int y EINA_UNUSED, int w, int h, const char *extra_options)
@@ -638,9 +617,6 @@ static const struct ecore_evas_engine _engines[] = {
 #endif
 #ifdef BUILD_ECORE_EVAS_OPENGL_X11
   {"opengl_x11", _ecore_evas_constructor_opengl_x11},
-#endif
-#ifdef BUILD_ECORE_EVAS_SOFTWARE_8_X11
-  {"software_8_x11", _ecore_evas_constructor_software_8_x11},
 #endif
 #ifdef BUILD_ECORE_EVAS_FB
   {"fb", _ecore_evas_constructor_fb},
